Cleaning things up before starting work on simple GPU-accelerated rasterizer with light and shadow